Add type to download link

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4 text-center">
-          <a href="download/QuickToDo.zip">
+          <a href="download/QuickToDo.zip" type="application/zip">
             <i class="fa fa-5x fa-cloud-download"></i>
           </a>
           <h3>DOWNLOAD</h3>
