--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-md-4 text-center">
+        <div class="col-sm-4 text-center">
           <a href="download/QuickToDo.zip" download>
             <i class="fa fa-5x fa-cloud-download"></i>
           </a>
@@ -47,19 +47,56 @@
 
           <p>The latest version off QuickTodo.</p>
         </div>
-        <div class="col-md-4 text-center">
+        <div class="col-sm-4 text-center">
           <a href="https://github.com/marska/habitrpg-quick-todo">
             <i class="fa fa-5x fa-github"></i>
           </a>
           <h3>CONTRIBUTE</h3>
           <p>Please feel free to fork.</p>
         </div>
-        <div class="col-md-4 text-center">
+        <div class="col-sm-4 text-center">
+          <a href="https://github.com/marska/habitrpg-quick-todo/issues/new">
+            <i class="fa fa-5x fa-lightbulb-o"></i>
+          </a>
+          <h3>IDEA</h3>
+          <p>You have an idea? Share it.</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- HabitRpg promo video -->
+    <div class="container">
+      <div class="row">
+        <div class="video-container">
+          <iframe height="281" src="http://player.vimeo.com/video/76557040" frameborder="0" allowfullscreen=""></iframe>
+        </div>
+
+      </div>
+    </div>
+
+    <!--contact-->
+    <div class="container" style="margin-top: 50px;">
+      <div class="row">
+        <div class="col-sm-4 text-center">
           <a href="https://raw.githubusercontent.com/marska/habitrpg-quick-todo/master/LICENSE">
             <i class="fa fa-5x fa-file-text-o"></i>
           </a>
           <h3>LICENCE</h3>
           <p>Licensed under the Apache License, Version 2.0.</p>
+        </div>
+        <div class="col-sm-4 text-center">
+          <a href="https://github.com/marska/habitrpg-quick-todo/releases/">
+            <i class="fa fa-5x fa-code-fork"></i>
+          </a>
+          <h3>RELEASES</h3>
+          <p>Here is the changelog and old verions.</p>
+        </div>
+        <div class="col-sm-4 text-center">
+          <a href="https://github.com/marska">
+            <i class="fa fa-5x fa-envelope"></i>
+          </a>
+          <h3>CONTACT ME</h3>
+          <p>If you have any questions, comments, or suggestions.</p>
         </div>
       </div>
     </div>
@@ -69,7 +106,7 @@
     </div>
 
   </div>
-  
+
   <script>
     (function (i, s, o, g, r, a, m) {
       i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
