--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </a>
           <h3>DOWNLOAD</h3>
 
-          <p>The latest version off QuickTodo.</p>
+          <p>QuickToDo v1.0.4.0</p>
         </div>
         <div class="col-sm-4 text-center">
           <a href="https://github.com/marska/habitrpg-quick-todo">
