--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
       <h1>HABIT RPG QUICK TODO</h1>
     </div>
     <div class="text-center">
-      <p>QuickTodo is simple Windows application to quickly add tasks to <a href="https://habitrpg.com" target="_blank">HabitRPG</a>.</p>
-    </div>
+      <p>
+	  QuickToDo is a simple Windows application that allows users to quickly add a To-Do task to <a href="https://habitrpg.com" target="_blank">HabitRPG</a> without having to go directly to the website. This allows users to quickly add a task when they are thinking about it without having to stop everything and go to the website or pull the phone over.
+      </p>
+	</div>
 
     <div class="container">
       <div class="row">
